# mu_rust_helpers

./: .git-blame-ignore-revs  .markdownlintignore  Cargo.toml  Makefile.toml  README.md  cspell.json  test
.azurepipelines/: BuildAndTest.yml
boot_services/: Cargo.toml
boot_services/src/: allocation.rs  boot_services.rs  boxed.rs  c_ptr.rs  event.rs  ffi_helper.rs  global_allocator.rs  protocol_handler.rs  static_ptr.rs  tpl.rs
examples/: create_events_with_tpl_mutex.rs  event_when_interface_installed.rs
guid/: Cargo.toml
guid/src/: guid.rs
guid_helpers/: Cargo.toml
guid_helpers/src/: guid_helpers.rs
perf_timer/: Cargo.toml
perf_timer/src/: arch.rs  lib.rs
runtime_services/: Cargo.toml
runtime_services/src/: allocation.rs  boxed.rs  runtime_services.rs  variable_services.rs
src/: lib.rs  macros.rs
tpl_mutex/: Cargo.toml
tpl_mutex/src/: tpl_mutex.rs
uefi_decompress/: Cargo.toml
uefi_decompress/src/: lib.rs
