[workspace]
resolver = "2"
members = [
    "guid",
    "perf_timer",
    "uefi_decompress",
]

[workspace.package]
version = "3.0.2"
repository = "https://github.com/microsoft/mu_rust_helpers"
license = "BSD-2-Clause-Patent"
edition = "2021"
include = [
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "examples/**/*",
  "src/**",
]

[workspace.dependencies]
log = "~0.4"
mu_uefi_decompress = { path="./uefi_decompress", version = "3" }
mu_uefi_guid = { path="./guid", version = "3" }
r-efi = "5.1.0"
uuid = { version = "1.10.0", default-features = false}

[package]
name = "mu_rust_helpers"
description = "Helper functions for UEFI Rust applications"
readme = "README.md"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
include.workspace = true

[features]
default = ["guid", "uefi_decompress", "perf_timer"]
guid = ["dep:mu_uefi_guid"]
perf_timer = ["dep:mu_uefi_perf_timer"]
uefi_decompress = ["dep:mu_uefi_decompress"]

[dependencies]
mu_uefi_decompress = { workspace = true, optional = true }
mu_uefi_guid = { workspace = true, optional = true }
mu_uefi_perf_timer = { path = "./perf_timer", version = "3", optional = true }

[dev-dependencies]
r-efi = { workspace = true }

