[package]
name = "mu_uefi_boot_services"
resolver = "2"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
description = "Rust-friendly UEFI Boot Service wrappers."

[lib]
name = "boot_services"
path = "src/boot_services.rs"

[features]
default = []
global_allocator = []
mockall = ["dep:mockall"]

[dependencies]
r-efi = { workspace = true }
mockall = { version = "0.13", optional = true }

[dev-dependencies]
mockall = { version = "0.13.0" }
