[package]
name = "mu_uefi_guid"
resolver = "2"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
description = "DEPRECATED: Please use the patina crate instead. UEFI GUID support."

[lib]
name = "guid"
path = "src/guid.rs"

[dependencies]
r-efi = { workspace = true }
uuid = { workspace = true }
