[package]
name = "mu_uefi_perf_timer"
resolver = "2"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
description = "Performance timer support."

[lib]
name = "perf_timer"

[features]
default = []
validate_cpu_features = []

[target.'cfg(target_arch="aarch64")'.dependencies]
aarch64-cpu = { version = "11.0.0", optional = false }

[dependencies]
log = "~0.4"
