[package]
name = "mu_uefi_runtime_services"
resolver = "2"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
description = "Rust-friendly UEFI Runtime Service wrappers."

[lib]
name = "runtime_services"
path = "src/runtime_services.rs"

[features]
default = []
global_allocator = []
mockall = ["dep:mockall"]

[dependencies]
r-efi = { workspace = true }
mockall = { version = "*", optional = true }
fallible-streaming-iterator = { version = "0.1.9" }

[dev-dependencies]
mockall = { version = "0.13.0" }
