[package]
name = "mu_uefi_tpl_mutex"
resolver = "2"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
description = "Task Priority Level (TPL) mutual exclusion support."

[lib]
name = "tpl_mutex"
path = "src/tpl_mutex.rs"

[dependencies]
r-efi = { workspace=true }
mu_uefi_boot_services = { workspace=true }

[dev-dependencies]
mockall = { version = "0.13.0" }
mu_uefi_boot_services = { workspace=true, features = ["mockall"]}
