[package]
name = "mu_uefi_decompress"
resolver = "2"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
description = "UEFI decompression."

[lib]
name = "uefi_decompress"
path = "src/lib.rs"

[dependencies]
log = { workspace = true }

[dependencies.bitvec]
version = "1"
default-features = false
