[package]
name = "mu_uefi_decompress"
resolver = "2"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
description = "DEPRECATED: Please use the patina crate instead. UEFI decompression."

[lib]
name = "uefi_decompress"
path = "src/lib.rs"

[dependencies]
log = { workspace = true }

[dependencies.bitvec]
version = "1"
default-features = false
